style: fix vertical align of text in project tag

--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -49,6 +49,12 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
+}
+
+.projectTag span {
+    margin-top: 2px;
+    margin-bottom: -2px;
 }
 
 .projectTag a {
